# fauni-search

./: .env.dev.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  fauni.config.json
docs/: demo-capabilities.md  run-local.md  troubleshooting.md
docs/adr/: 0001-server-first-cli-and-web.md  0002-content-centered-core-model.md  0003-content-reuse-state-model.md  0004-row-level-vector-prefiltering.md
scripts/: extract_tatdqa_page_images.py
scripts/local/: bootstrap-linux.sh  check-e2e.sh  check.sh  cleanup-legacy-runtime.sh  cutover-runtime.sh  doctor.sh  download-model.sh  env.sh  install-tools.sh  prune-dev-qdrant-collections.sh  reset-dev-runtime.sh  run-qdrant.sh  run.sh  smoke-document-search.sh  smoke-faus-serve.sh  smoke-image-search.sh  smoke-runtime-health.sh  smoke-runtime-status.sh  smoke-source-management.sh  smoke-text-search.sh  smoke-video-search.sh  status.sh  stop.sh
sidecar/: README.md  pyproject.toml
sidecar/src/fauni_sidecar/: __init__.py  app.py  modeld.py  runtime.py
sidecar/tests/: test_app.py  test_modeld_logging.py
specs/: README.md
specs/000-foundation/: spec.md
specs/002-state-and-data-model/: spec.md
specs/003-ingestion-and-indexing/: spec.md
specs/004-search/: spec.md
specs/005-provider-capabilities-and-profiles/: spec.md
specs/006-runtime-and-execution/: spec.md
specs/007-storage-and-persistence/: spec.md
specs/008-ui-ux/: app-shell-and-navigation.md  current-targets.md  search-workspace.md  settings-workspace.md  shared-product-language.md  source-inventory-workspace.md  spec.md
src/: api.rs  config.rs  http.rs  indexing.rs  lib.rs  main.rs  model.rs  persistence.rs  provider.rs  qdrant.rs  query_assets.rs  runtime.rs  sidecar.rs  source_roots.rs
src/state/: jobs.rs  (+6 more)
tests/: faus_cli.rs  import_api.rs  jobs_api.rs  library_api.rs  local_cleanup_script.rs  maintenance_api.rs  openapi_api.rs  provider_settings_api.rs  restart_persistence.rs  runtime_health_api.rs  runtime_status_api.rs  search_api.rs  server_hosted_web.rs  source_management.rs  terminology_audit.rs
ui/: index.html  node-shims.d.ts  package.json  playwright.config.js  playwright.config.ts  playwright.global-setup.js  playwright.global-setup.ts  playwright.global-teardown.js  playwright.global-teardown.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
(+177 files in other folders)
