[package]
name = "fauni-search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "multipart"] }
clap = { version = "4.5", features = ["derive"] }
lopdf = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["fs"] }
utoipa = { version = "5.4", features = ["preserve_path_order"] }
utoipa-axum = "0.2"
webbrowser = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
