[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fauni-sidecar"
version = "0.1.0"
description = "FauniSearch local Python sidecar for ColQwen-backed embedding and media work"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
gpu = [
  "accelerate>=1.1,<2",
  "colpali-engine>=0.3,<1",
  "hf-transfer>=0.1,<1",
  "huggingface-hub>=1.0,<2",
  "pillow>=10.4,<11",
  "pypdfium2>=4.30,<5",
  "qwen-vl-utils>=0.0.14,<1",
  "safetensors>=0.4,<1",
  "sentencepiece>=0.2,<1",
  "transformers>=5.0,<6",
]
test = [
  "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fauni_sidecar"]
